Bug 324614 - Current track does not show (html?) special chars and text after
Summary: Current track does not show (html?) special chars and text after
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Context View/Current Track (other bugs)
Version First Reported In: 2.8.0
Platform: Ubuntu Linux
: NOR minor
Target Milestone: 2.9
Assignee: Amarok Bugs
URL:
Keywords:
: 341125 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-09-07 12:45 UTC by Kyrylo Bohdanenko
Modified: 2014-11-21 15:48 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kyrylo Bohdanenko 2013-09-07 12:45:26 UTC
For example there's a song "MY<DSMBR" by Linkin Park. It is displayed like "MY" in Current Track widget.

Reproducible: Always

Steps to Reproduce:
1. Play a track with (html?) special characters in the name (e.g. Foo<Bar)
Actual Results:  
Current track displays name 'Foo'

Expected Results:  
Current track should display 'Foo<Bar'

Seems like there's an HTML special chars escaper missing in Current Track widget.
Comment 1 Mark Kretschmann 2013-09-07 14:07:02 UTC
Git commit 372d77b2fe833d1eb27b35732199dd6e28443de2 by Mark Kretschmann.
Committed on 07/09/2013 at 14:02.
Pushed by markey into branch 'master'.

Don't suppress html tag like characters.

Example: "MY<DSMBR" by Linkin Park was shown as "MY".

M  +4    -11   src/context/widgets/TextScrollingWidget.cpp

http://commits.kde.org/amarok/372d77b2fe833d1eb27b35732199dd6e28443de2
Comment 2 vedant agarwala 2014-05-21 10:40:28 UTC
Git commit c94ba7c33706dfad9231d4a23146b7aab01a15da by Vedant Agarwala, on behalf of Mark Kretschmann.
Committed on 07/09/2013 at 14:02.
Pushed by vedanta into branch 'tagguessing'.

Don't suppress html tag like characters.

Example: "MY<DSMBR" by Linkin Park was shown as "MY".

M  +4    -11   src/context/widgets/TextScrollingWidget.cpp

http://commits.kde.org/amarok/c94ba7c33706dfad9231d4a23146b7aab01a15da
Comment 3 Philipp A. 2014-11-21 15:48:02 UTC
*** Bug 341125 has been marked as a duplicate of this bug. ***