Don't suppress html tag like characters.

Example: "MY<DSMBR" by Linkin Park was shown as "MY".

BUG: 324614